2018-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sfw.c (ReadSFWImage): Enforce that file is read using the
	JPEG reader. (Credit to OSS-Fuzz)

	* coders/miff.c (ReadMIFFImage): Fix leak of 'values' buffer due
	to change made yesterday.

	* coders/mpc.c (ReadMPCImage): Fix leak of 'values' buffer due to
	change made yesterday.  Fixes oss-fuzz 10277
	"graphicsmagick/coder_MPC_fuzzer: Direct-leak in
	ReadMPCImage". (Credit to OSS-Fuzz)

2018-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Support legacy keyword
	'color-profile' for ICC color profile as was used by ImageMagick
	4.2.9.

	* coders/mpc.c (ReadMPCImage): Require that first keyword/value be
	id=MagickCache

	* coders/miff.c (ReadMIFFImage): Require that first keyword/value
	be id=ImageMagick.

2018-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadElement): Add more size checks.

	* coders/jnx.c (ExtractTileJPG): Enforce that JPEG tiles are read
	by the JPEG coder.  Fixes oss-fuzz 10147
	"graphicsmagick/coder_JNX_fuzzer: Use-of-uninitialized-value in
	funcDCM_PhotometricInterpretation". (Credit to OSS-Fuzz)

2018-09-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Zero fill raster error recovery.

2018-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPrimitiveToPath): Second attempt to
	prevent heap write overflow of PathInfo array.  Fixes oss-fuzz
	10096 "Heap-buffer-overflow in ConvertPrimitiveToPath". (Credit to
	OSS-Fuzz)

2018-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c ("QuantumTransferMode"): CIE Log images with an
	alpha channel are not supported.  Fixes oss-fuzz 10013
	"graphicsmagick/coder_TIFF_fuzzer: Use-of-uninitialized-value in
	DisassociateAlphaRegion". (Credit to OSS-Fuzz)

	* magick/render.c (DrawImage): SetImageAttribute() appends new
	text to any existing value, leading to every increasing memory