@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003-2017 GraphicsMagick Group
+% Copyright (C) 2003-2018 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 %
 % This program is covered by multiple licenses, which are described in
@@ -1367,12 +1367,12 @@ static const TagInfo
 */
 
 static const char *
-EXIFTagToDescription(int t, char *tag_description)
+EXIFTagToDescription(unsigned int t, char *tag_description)
 {
   unsigned int
     i;
 
-  for (i=0; i < sizeof(tag_table)/sizeof(tag_table[0]); i++)
+  for (i=0; i < ArraySize(tag_table); i++)
     {
       if (tag_table[i].tag == t)
         {
@@ -1403,7 +1403,7 @@ EXIFDescriptionToTag(const char *description)
 }
 
 static const char *
-EXIFFormatToDescription(int f)
+EXIFFormatToDescription(unsigned int f)
 {
   const char
     *description;
@@ -1453,7 +1453,7 @@ EXIFFormatToDescription(int f)
   return description;
 }
 
-static int
+static unsigned int
   format_bytes[] =
   {
     0,
@@ -1592,7 +1592,7 @@ GenerateEXIFAttribute(Image *image,const char *specification)
   MagickBool
     debug=MagickFalse;
 
-  assert((sizeof(format_bytes)/sizeof(format_bytes[0])-1) == EXIF_NUM_FORMATS);
+  assert((ArraySize(format_bytes)-1) == EXIF_NUM_FORMATS);
 
   {
     const char *
@@ -1771,13 +1771,13 @@ GenerateEXIFAttribute(Image *image,const char *specification)
         nde=MAX_TAGS_PER_IFD;
       for (; de < nde; de++)
         {
-          unsigned int
+          size_t
             n;
 
-          int
-            t,
+          unsigned int
+            c,
             f,
-            c;
+            t;
 
           unsigned char
             *pde,
@@ -1792,11 +1792,16 @@ GenerateEXIFAttribute(Image *image,const char *specification)
             }
           t=Read16u(morder,pde); /* get tag value */
           f=Read16u(morder,pde+2); /* get the format */
-          if ((f < 0) ||
-              ((size_t) f >= sizeof(format_bytes)/sizeof(format_bytes[0])))
+          if ((size_t) f >= ArraySize(format_bytes))
             break;
-          c=(long) Read32u(morder,pde+4); /* get number of components */
-          n=c*format_bytes[f];
+          c=Read32u(morder,pde+4); /* get number of components */
+          n=MagickArraySize(c,format_bytes[f]);
+          if ((n == 0) && (c != 0) && (format_bytes[f] != 0))
+            {
+              if (debug)
+                fprintf(stderr, "EXIF: Invalid Exif, too many components (%u).\n",c);
+              goto generate_attribute_failure;
+            }
           if (n <= 4)
             pval=(unsigned char *) pde+8;
           else
@@ -1817,7 +1822,7 @@ GenerateEXIFAttribute(Image *image,const char *specification)
             {
               fprintf(stderr,
                       "EXIF: TagVal=%d  TagDescr=\"%s\" Format=%d  "
-                      "FormatDescr=\"%s\"  Components=%d\n",t,
+                      "FormatDescr=\"%s\"  Components=%u\n",t,
                       EXIFTagToDescription(t,tag_description),f,
                       EXIFFormatToDescription(f),c);
             }
@@ -1853,7 +1858,7 @@ GenerateEXIFAttribute(Image *image,const char *specification)
             it was not requested, then we don't return a string value
             for it.
           */
-          if (all || (tag == t) || (GPS_OFFSET == t))
+          if (all || (tag == (int) t) || (GPS_OFFSET == t))
             {
               char
                 s[MaxTextExtent];
@@ -1912,7 +1917,7 @@ GenerateEXIFAttribute(Image *image,const char *specification)
                     /*
                       Only report value if this tag was requested.
                     */
-                    if (all || (tag == t))
+                    if (all || (tag == (int) t))
                       {
                         FormatString(s,"%lu",offset);
                         value=AllocateString(s);
@@ -2592,7 +2597,7 @@ FindEXIFAttribute(const unsigned char *profile_info,
 
   attribp = (unsigned char *)NULL;
 
-  assert((sizeof(format_bytes)/sizeof(format_bytes[0])-1) == EXIF_NUM_FORMATS);
+  assert((ArraySize(format_bytes)-1) == EXIF_NUM_FORMATS);
 
   {
     const char *
@@ -2678,13 +2683,13 @@ FindEXIFAttribute(const unsigned char *profile_info,
         nde=MAX_TAGS_PER_IFD;
       for (; de < nde; de++)
         {
-          unsigned int
+          size_t
             n;
 
-          int
-            t,
+          unsigned int
+            c,
             f,
-            c;
+            t;
 
           unsigned char
             *pde,
@@ -2700,11 +2705,16 @@ FindEXIFAttribute(const unsigned char *profile_info,
             }
           t=Read16u(morder,pde); /* get tag value */
           f=Read16u(morder,pde+2); /* get the format */
-          if ((f < 0) ||
-              ((size_t) f >= sizeof(format_bytes)/sizeof(format_bytes[0])))
+          if ((size_t) f >= ArraySize(format_bytes))
             break;
-          c=(long) Read32u(morder,pde+4); /* get number of components */
-          n=c*format_bytes[f];
+          c=Read32u(morder,pde+4); /* get number of components */
+          n=MagickArraySize(c,format_bytes[f]);
+          if ((n == 0) && (c != 0) && (format_bytes[f] != 0))
+            {
+              if (debug)
+                fprintf(stderr, "EXIF: Invalid Exif, too many components (%u).\n",c);
+              goto find_attribute_failure;
+            }
           if (n <= 4)
             pval=(unsigned char *) pde+8;
           else
@@ -2725,7 +2735,7 @@ FindEXIFAttribute(const unsigned char *profile_info,
             {
               fprintf(stderr,
                   "EXIF: TagVal=%d  TagDescr=\"%s\" Format=%d  "
-                  "FormatDescr=\"%s\"  Components=%d\n",t,
+                  "FormatDescr=\"%s\"  Components=%u\n",t,
                   EXIFTagToDescription(t,tag_description),f,
                   EXIFFormatToDescription(f),c);
             }
